--- a/_config.yml
+++ b/_config.yml
@@ -48,11 +48,11 @@ disqus_shortname: crykiss
 
 # Category descriptions (for archive pages)
 descriptions:
-  - cat: jekyll
-    desc: "Posts describing Jekyll setup techniques."
+  - cat: c++
+    desc: "c++ 사용 경험"
 
-  - cat: dummy
-    desc: "Just some placeholder posts, lorem ipsum and the rest."
+  - cat: visual studio
+    desc: "visual studio 사용 경험"
 
 # Social icons and sharing options
 #
